--- a/index.html
+++ b/index.html
@@ -10,11 +10,26 @@
     <script src="javaScript.js" async></script>
 </head>
 <body>
-    <header></header>
+    <header>
+        <section>
+            <span id="trigram">&#9782;</span>
+            <img id="logo" src="media/logo.png" alt="Das Logo von Fuwate in schwarz auf weißem Grund.">
+        </section>
+        <nav class="main_navigation_header">
+            <a>Traingszeiten, Spielort</a>
+            <a>Nächstes Turnier</a>
+            <a>Rangliste</a>
+            <a>Regelwerk</a>
+            <a>Spielszenen</a>
+            <a>Geschichte von Fuwate</a>
+        </nav>
+    </header>
     <main>
-        <iframe width="100" src="https://www.youtube.com/embed/dY_Jjny0LW4?si=EzGq88ZGVimCEfzp"
+        <iframe class="full_width_video" src="https://www.youtube.com/embed/dY_Jjny0LW4?si=EzGq88ZGVimCEfzp"
                 title="Fuwate Demo" frameborder="0"
-                referrerpolicy="no-referrer-when-downgrade" allowfullscreen>#</iframe>
+                allow="accelerometer; autoplay; mute; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
     </main>
     <footer></footer>
 </body>
