Test for look and feel on real phone

--- a/index.html
+++ b/index.html
@@ -11,25 +11,34 @@
 </head>
 <body>
     <header>
-        <section>
-            <span id="trigram">&#9782;</span>
-            <img id="logo" src="media/logo.png" alt="Das Logo von Fuwate in schwarz auf weißem Grund.">
+        <section class="header_items flex_row">
+            <span id="trigram" class="margin10">&#9782;</span>
+            <img id="logo" class="margin10" src="media/logo.png" alt="Das Logo von Fuwate in schwarz auf weißem Grund.">
         </section>
-        <nav class="main_navigation_header">
-            <a>Traingszeiten, Spielort</a>
-            <a>Nächstes Turnier</a>
-            <a>Rangliste</a>
-            <a>Regelwerk</a>
-            <a>Spielszenen</a>
-            <a>Geschichte von Fuwate</a>
+        <nav class="main_navigation">
+            <div class="navigation_items">
+                <a>Traingszeiten</a>
+                <a>Nächstes Turnier</a>
+                <a>Rangliste und Regelwerk</a>
+                <a>Spielszenen</a>
+            </div>
         </nav>
     </header>
     <main>
+        <img src="media/landing.png" class="full_width_image" alt="Einige Menschen spielen FuWaTe, ein Ball fliegt ins Bild.">
+      
+        <h2 class="center_text margin10">FuWaTe steht für <strong style="font-weight: 600;">Fußball Wand Tennis</strong></h2>
+        <p class="center_text">Erfunden in einer Jonglier-Übungsgruppe in Hannover in den 90ern. Seit 2013 hat sich eine kleine Community rund um den Sport entwickelt. 
+            <br><br>
+            Aktuell gibt eine Spielstätte bei SG 74 in Hannover.
+        </p>
+
         <iframe class="full_width_video" src="https://www.youtube.com/embed/dY_Jjny0LW4?si=EzGq88ZGVimCEfzp"
                 title="Fuwate Demo" frameborder="0"
                 allow="accelerometer; autoplay; mute; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
         </iframe>
+
     </main>
     <footer></footer>
 </body>
