index ready, accept footer

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         </nav>
     </header>
     <main>
-        <section class="hero black_background padding30">
+        <section class="hero padding30">
             <img src="media/landing.png" class="full_width_image" alt="Einige Menschen spielen FuWaTe, ein Ball fliegt ins Bild.">
         
-            <div class="white_font margin">
+            <div>
                 <h2 class="center_text">FuWaTe steht für <strong style="font-weight: 600;">Fußball Wand Tennis</strong></h2>
                 <p class="center_text margin10">Der Sport wurde erfunden von einer Jonglier-Übungsgruppe in Hannover rund um Robert Wicke und Frank Reichelt. Seit 2013 hat sich eine kleine Community rund um den Sport in Hannover entwickelt. 
                     <br><br>
