--- a/trainingszeiten.html
+++ b/trainingszeiten.html
@@ -46,7 +46,7 @@
                 class="full_width_video" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade">
             </iframe>
-            <p class="bold black_background white_font padding30">
+            <p class="black_background white_font padding20">
                 Adresse:
                 <br><br>                
                 Sportgemeinschaft von 1874 Hannover e.V.<br>
@@ -55,9 +55,10 @@
                 (Fuwate ist gleich links vom großen Parkplatz)
             </p>
 
-            
         </section>
 
+        <p class="caveat_font bigger_font black_background white_font padding30 center_text">
+            Immer Volley, gegen die Wand und über das Netz</p>
 
     </main>
     <footer class="flex_row flex_wrap space_around center_vertically">
@@ -65,7 +66,7 @@
         <a class="white_font margin10">Impressum</a>
         <a class="white_font margin10">Rechtliches</a>
         <a id="link_to_top">
-            <img src="media/logo_inv.png" alt="FuWaTe Logo mit invertierten Farben">
+            <img id="logo_inv" src="media/logo_inv.png" alt="FuWaTe Logo mit invertierten Farben">
         </a>
     </footer>
 </body>
