--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <a class="white_font margin10">Impressum</a>
         <a class="white_font margin10">Rechtliches</a>
         <a id="link_to_top">
-            <img src="media/logo_inv.png" alt="FuWaTe Logo mit invertierten Farben">
+            <img id="logo_inv" src="media/logo_inv.png" alt="FuWaTe Logo mit invertierten Farben">
         </a>
     </footer>
 </body>
