--- a/trainingszeiten.html
+++ b/trainingszeiten.html
@@ -29,7 +29,7 @@
     </header>
     
     <main>
-        <section class="hero padding30">        
+        <section class="landing_subpage margin10 main_background padding50 round_corners">        
             <div>
                 <h2 class="center_text bold">Trainingszeiten</h2>
                 <p class="bold">Apr-Okt: jeden Montag um 17:00
@@ -40,10 +40,10 @@
             </div>
         </section>
 
-        <section class="flex_column">
+        <section class="hundred_to_fifty_layout center_vertically black_background">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3053.6905341176493!2d9.691658412615062!3d52.38235054629452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b07537e6d040b1%3A0x2c07a4f1863a521e!2sFuWaTe%20(Fu%C3%9FballWandTennis)!5e1!3m2!1sen!2sde!4v1761557141590!5m2!1sen!2sde"
-                class="full_width_video" style="border:0;" allowfullscreen="" loading="lazy"
+                class="full_width_iFrame" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade">
             </iframe>
             <p class="black_background white_font padding20">
@@ -54,14 +54,13 @@
                 30167 Hannover<br>
                 (Fuwate ist gleich links vom großen Parkplatz)
             </p>
-
         </section>
 
         <p class="caveat_font bigger_font black_background white_font padding30 center_text">
             Immer Volley, gegen die Wand und über das Netz</p>
 
     </main>
-    <footer class="flex_row flex_wrap space_around center_vertically">
+    <footer class="flex_row flex_wrap space_around center_vertically round_corners">
         <a class="white_font margin10">Kontakt</a>
         <a class="white_font margin10">Impressum</a>
         <a class="white_font margin10">Rechtliches</a>
