Finished Gallery.html

--- a/trainingszeiten.html
+++ b/trainingszeiten.html
@@ -20,10 +20,10 @@
         <nav class="main_navigation">
             <div class="navigation_items">
                 <a href="index.html">Start</a>
-                <a>Traingszeiten</a>
+                <a href="#">Traingszeiten</a>
                 <a>Nächstes Turnier</a>
                 <a>Rangliste und Regelwerk</a>
-                <a>Spielszenen</a>
+                <a href="gallerie.html">Gallerie</a>
             </div>
         </nav>
     </header>
