--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </section>
         <nav class="main_navigation">
             <div class="navigation_items">
-                <a>Start</a>
+                <a href="#">Start</a>
                 <a href="trainingszeiten.html">Traingszeiten</a>
                 <a>Nächstes Turnier</a>
                 <a>Rangliste und Regelwerk</a>
-                <a>Spielszenen</a>
+                <a href="gallerie.html">Gallerie</a>
             </div>
         </nav>
     </header>
