FINISHED TURNIER.html

--- a/gallerie.html
+++ b/gallerie.html
@@ -21,7 +21,7 @@
             <div class="navigation_items">
                 <a href="index.html">Start</a>
                 <a href="trainingszeiten.html">Traingszeiten</a>
-                <a>Nächstes Turnier</a>
+                <a href="turnier.html">Nächstes Turnier</a>
                 <a>Rangliste und Regelwerk</a>
                 <a href="#">Gallerie</a>
             </div>
@@ -30,14 +30,12 @@
     
     <main>
         <section class="landing_subpage margin10 padding30 round_corners">        
-            <div class="">
                 <h2 class="center_text bold">Gallerie</h2>
                 <p>
                     Einige Impressionen vom FuWaTe Turnier 2013 beim Hochschulsportfest der Leibniz Universität Hannover. 
                     Ein tolles FuWaTe Turnier bei tollem Wetter und mit netten Menschen.
                     Weitere Turniere folgten, hier wurde der Grundstein gesetzt für die weitere Entwicklung des Sports.
                 </p>   
-            </div>
         </section>
 
         <section class="gallery center_vertically padding50 black_background round_corners">
