--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="navigation_items">
                 <a href="#">Start</a>
                 <a href="trainingszeiten.html">Traingszeiten</a>
-                <a>Nächstes Turnier</a>
+                <a href="turnier.html">Nächstes Turnier</a>
                 <a>Rangliste und Regelwerk</a>
                 <a href="gallerie.html">Gallerie</a>
             </div>
@@ -38,7 +38,6 @@
                     <br><br>
                     Aktuell gibt eine Spielstätte bei SG 74 in Niedersachsen.
                 </p>
-
             </div>
 
             
@@ -51,7 +50,7 @@
         </div>
        
 
-        <iframe class="full_width_video round_corners" src="https://www.youtube.com/embed/23DLHXsE-Hw?si=QzEQIWUNAzFM6mlq""
+        <iframe class="full_width_video round_corners" src="https://www.youtube.com/embed/dY_Jjny0LW4?si=RFk1ElBL9iU9eIbQ"
                 title="Fuwate Demo" frameborder="0"
                 allow="accelerometer; autoplay; mute; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
