--- a/trainingszeiten.html
+++ b/trainingszeiten.html
@@ -21,7 +21,7 @@
             <div class="navigation_items">
                 <a href="index.html">Start</a>
                 <a href="#">Traingszeiten</a>
-                <a>Nächstes Turnier</a>
+                <a href="turnier.html">Nächstes Turnier</a>
                 <a>Rangliste und Regelwerk</a>
                 <a href="gallerie.html">Gallerie</a>
             </div>
@@ -30,14 +30,12 @@
     
     <main>
         <section class="landing_subpage margin10 main_background padding50 round_corners">        
-            <div>
                 <h2 class="center_text bold">Trainingszeiten</h2>
                 <p class="bold">Apr-Okt: jeden Montag um 17:00
                 <p class="italic">
                     Spielern wird nahe gelegt, die FuWaTe Saisonkarte zu kaufen, für 40 € für eine Saison. Alternativ eine <a href="https://neu.sg74.de/verein/mitgliedschaft/" class="italic blue_font">Mitgliedschaft im
                     Verein bei SG74</a> abzuschließen. Beides berechtigt zum Spielen und dem Zugang zu den Duschen und Umkleiden.
                 </p>
-            </div>
         </section>
 
         <section class="hundred_to_fifty_layout center_vertically black_background">
