Finished the site

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="#">Start</a>
                 <a href="trainingszeiten.html">Traingszeiten</a>
                 <a href="turnier.html">Nächstes Turnier</a>
-                <a>Rangliste und Regelwerk</a>
+                <a href="regelwerk.html">Regelwerk</a>
                 <a href="gallerie.html">Gallerie</a>
             </div>
         </nav>
