--- a/trainingszeiten.html
+++ b/trainingszeiten.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <section class="header_items flex_row">
-            <span id="trigram" class="margin10">&#9776;</span>
+            <span id="trigram" class="margin10">&#9779;</span>
             <a href="index.html">
                 <img id="logo" class="margin10" src="media/logo.png" alt="Das Logo von Fuwate in schwarz auf weißem Grund.">
             </a>
@@ -22,7 +22,7 @@
                 <a href="index.html">Start</a>
                 <a href="#">Traingszeiten</a>
                 <a href="turnier.html">Nächstes Turnier</a>
-                <a>Rangliste und Regelwerk</a>
+                <a href="regelwerk.html">Regelwerk</a>
                 <a href="gallerie.html">Gallerie</a>
             </div>
         </nav>
