--- a/turnier.html
+++ b/turnier.html
@@ -41,7 +41,7 @@
         <section class="landing_subpage center_text margin10 padding30 round_corners">
             <h2>Letztes Turnier: SG 74 Jubiläums Turnier</h2>
         
-            <p>Gewinner: Nicole Glowatzki und Robert Wicke</p>
+            <p>Gewinner: Nicole und Robert</p>
         </section>
 
 
